force-app/main/default/objects/Checklist_Template__c/Checklist_Template__c.object-meta.xml
<CustomObject>
    <label>Checklist Template</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Template</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>