force-app/main/default/objects/Checklist_Template__c/fields/BizGrade__c.field-meta.xml
<CustomField>
    <fullName>BizGrade__c</fullName>
    <description>사업 등급</description>
    <label>Biz Grade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>