force-app/main/default/objects/Checklist_Template__c/fields/BizGroup__c.field-meta.xml
<CustomField>
    <fullName>BizGroup__c</fullName>
    <description>사업부명</description>
    <label>Biz Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>