force-app/main/default/objects/Checklist_Template__c/fields/BizType__c.field-meta.xml
<CustomField>
    <fullName>BizType__c</fullName>
    <description>사업 유형</description>
    <label>Biz Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>